--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -263,7 +263,7 @@
                 -->
 
                 <form
-                class=" max-w-3xl mx-auto overscroll-x-none mt-8 divide-y "
+                class="max-w-3xl mx-auto overscroll-x-none mt-8 divide-y "
                 role="dialog"
                 aria-label="Filters"
                 >
@@ -271,52 +271,41 @@
                         <div class="-my-8 divide-y">
                             <div class="py-8">
                                 <fieldset>
-                                    <legend class="text-xl text-center mb-3 font-medium">Kategorier</legend>
-
-                                        <ul class="flex items-center mt-6 justify-between">
+                                        <ul class="flex items-center justify-between">
                                             <li>
-                                                <label class="flex items-center text-sm">
-                                                    <input type="checkbox" class="w-6 h-6 border border-gray-200 rounded-md" />
-                                                    <span class="ml-3 font-medium">Fotokundskab</span>
+                                              <label class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white">
+                                                <span class="font-medium">Fotokundskab</span>
                                                 </label>
                                             </li>
 
                                             <li>
-                                                <label class="flex items-center text-sm">
-                                                    <input type="checkbox" class="w-6 h-6 border border-gray-200 rounded-md" />
-                                                    <span class="ml-3 font-medium">Rejser</span>
-                                                </label>
+                                              <label class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white">
+                                                  <span class="font-medium">Rejser</span>
+                                              </label>
                                             </li>
 
                                             <li>
-                                                <label class="flex items-center text-sm">
-                                                    <input type="checkbox" class="w-6 h-6 border border-gray-200 rounded-md" />
-                                                    <span class="ml-3 font-medium">Selvhjælp</span>
-                                                </label>
+                                              <label class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white">
+                                                <span class="font-medium">Selvhjælp</span>
+                                              </label>
                                             </li>
 
                                             <li>
-                                                <label class="flex items-center text-sm">
-                                                    <input type="checkbox" class="w-6 h-6 border border-gray-200 rounded-md" />
-                                                    <span class="ml-3 font-medium">Mest populære</span>
-                                                </label>
+                                              <label class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white">
+                                                <span class="font-medium">Nyheder</span>
+                                              </label>
+                                            </li>
+
+                                            <li>
+                                              <label class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white">
+                                                <span class="font-medium">Bestsellers</span>
+                                              </label>
                                             </li>
                                         </ul>
                                 </fieldset>
                             </div>
                         </div>
                     </main>
-
-                    <div class="flex items-center justify-between p-6">
-                        <button class="text-sm font-medium text-gray-600 underline" type="button">Fjern alle</button>
-                        <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="">
-                          <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
-                        
-                          <span class="relative text-sm font-medium text-black transition-colors group-hover:text-white">
-                            Vis resultater
-                          </span>
-                      </a>
-                    </div>
                 </form>   
         
 
