--- a/src/index.html
+++ b/src/index.html
@@ -80,19 +80,19 @@
               <ul class="hidden w-8/12 md:flex items-center font-medium justify-center space-x-8">
                 <li>
                   <a href="plakater.html"
-                    class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:text-gray-500">Shop plakater</a>
+                    class="text-base text-black focus:outline-none hover:border-b-black hover:border-b-2 pb-2">Shop plakater</a>
                 </li>
                 <li>
                   <a href="litteratur.html"
-                    class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:text-gray-500">Shop litteratur</a>
+                    class="text-base text-black focus:outline-none hover:border-b-black hover:border-b-2 pb-2">Shop litteratur</a>
                 </li>
                 <li>
                   <a href="inspiration.html"
-                    class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:text-gray-500">Inspiration</a>
+                    class="text-base text-black focus:outline-none hover:border-b-black hover:border-b-2 pb-2">Inspiration</a>
                 </li>
                 <li>
                   <a href="om.html"
-                    class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:text-gray-500">Om
+                    class="text-base text-black focus:outline-none hover:border-b-black hover:border-b-2 pb-2">Om
                     os</a>
                 </li>
               </ul>
@@ -1336,7 +1336,7 @@
                   <a href="index.html">
                     <img class="mt-5 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
                   </a>
-                  <p class="text-xs mt-5 leading-none text-gray-200">Copyright © 2022 Lunefuld Lykke</p>
+                  <p class="text-xs mt-5 leading-none text-gray-400">Copyright © 2022 Lunefuld Lykke</p>
                   <div class="flex items-center mt-7 gap-x-4">
                       <!-- Instagram -->
                       <button aria-label="instagram"
@@ -1373,26 +1373,26 @@
               <div class="flex flex-col">
                   <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
                   <a href="plakater.html"
-                      class="focus:outline-none focus:underline hover:text-gray-400 text-base leading-4 mt-6  text-gray-200 cursor-pointer">Shop plakater</a>
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
                   <a href="litteratur.html"
-                      class="focus:outline-none focus:underline hover:text-gray-400 text-base leading-4 mt-6  text-gray-200 cursor-pointer">Shop litteratur</a>
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
                   <a href="inspiration.html"
-                      class="focus:outline-none focus:underline hover:text-gray-400 text-base leading-4 mt-6  text-gray-200 cursor-pointer">Inspiration</a>
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
                   <a href="om.html"
-                      class="focus:outline-none focus:underline hover:text-gray-400 text-base leading-4 mt-6  text-gray-200 cursor-pointer">Om
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om
                       os
                   </a>
               </div>
               <div class="flex flex-col">
                   <h2 class="text-base font-bold mt-10 lg:mt-0 leading-4  text-white">Kundeservice</h2>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none focus:underline hover:text-gray-400 text-base leading-4 mt-6  text-gray-200 cursor-pointer">Kontakt
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt
                       policy</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none focus:underline hover:text-gray-400 text-base leading-4 mt-6  text-gray-200 cursor-pointer">FAQ
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ
                       policy</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none focus:underline hover:text-gray-400 text-base leading-4 mt-6  text-gray-200 cursor-pointer">Handelsbetingelser
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Handelsbetingelser
                       policy</a>
               </div>
               <div class="lg:block pt-0 mt-0 hidden">
