--- a/src/index.html
+++ b/src/index.html
@@ -519,70 +519,11 @@
                   </p>
                 </a>
               </li>
-
-              <li class="swiper-slide">
-                <a
-                  href="/product/smart-watch"
-                  class="block"
-                >
-                  <div>
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
-
-                    <h5 class="font-bold">
-                      Smart Watch
-                    </h5>
-                  </div>
-
-                  <div class="aspect-w-1 aspect-h-1">
-                    <img
-                      loading="lazy"
-                      alt="Smart Watch"
-                      class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
-                    />
-                  </div>
-
-                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
-                    $49.99
-                  </p>
-                </a>
-              </li>
-
-              <li class="swiper-slide">
-                <a
-                  href="/product/smart-watch"
-                  class="block"
-                >
-                  <div>
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
-
-                    <h5 class="font-bold">
-                      Smart Watch
-                    </h5>
-                  </div>
-
-                  <div class="aspect-w-1 aspect-h-1">
-                    <img
-                      loading="lazy"
-                      alt="Smart Watch"
-                      class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
-                    />
-                  </div>
-
-                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
-                    $49.99
-                  </p>
-                </a>
-              </li>
             </ul>
 
-            <div class="mt-12 swiper-pagination"></div>
-            <div class="flex justify-center mb-10 w-auto">
+            <div class="mt-0 swiper-pagination lg:hidden"></div>
+
+            <div class="flex justify-center mt-7 mb-10 w-auto">
               <a class="relative inline-block mt-9 px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="plakater.html">
                 <div class="inline-flex items-center">
                   <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
@@ -600,7 +541,7 @@
       <style>
         .swiper-pagination {
           bottom: 0;
-          position: relative;
+          /* position: ; */
         }
       </style>
 
@@ -844,7 +785,7 @@
           })
         })
       </script>
-      <!-- Testimonials/Trustpilot end -->
+      <!-- Testimonials/truspilot end -->
 
     <!-- Content end -->
 
