om os removed from nav

--- a/src/index.html
+++ b/src/index.html
@@ -78,11 +78,6 @@
                   <a href="inspiration.html"
                     class="text-base text-black focus:outline-none hover:border-b-black hover:border-b-2 pb-2">Inspiration</a>
                 </li>
-                <li>
-                  <a href="om.html"
-                    class="text-base text-black focus:outline-none hover:border-b-black hover:border-b-2 pb-2">Om
-                    os</a>
-                </li>
               </ul>
 
               <div class="md:w-2/12 justify-end flex items-center space-x-4 xl:space-x-8">
@@ -190,16 +185,6 @@
                     <svg class="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="25" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
                     <svg class="hidden" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="25" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
                   </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="om.html"
-                  class="flex items-center justify-between text-base text-black focus:outline-none">
-                  <p class="hover:border-b-black border-white border-b-2 pb-1">Om os</p>
-                    <div>
-                      <svg class="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="25" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
-                      <svg class="hidden" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="25" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
-                    </div>
                   </a>
                 </li>
               </ul>
@@ -836,28 +821,26 @@
               </div>
               <div class="flex flex-col">
                   <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
+                  <a href="index.html"
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
                   <a href="plakater.html"
                       class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
                   <a href="litteratur.html"
                       class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
                   <a href="inspiration.html"
                       class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
-                  <a href="om.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om
-                      os
-                  </a>
               </div>
               <div class="flex flex-col">
                   <h2 class="text-base font-bold mt-10 lg:mt-0 leading-4  text-white">Kundeservice</h2>
+                  <a href="om.html"
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
+                  </a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt
-                      policy</a>
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ
-                      policy</a>
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Handelsbetingelser
-                      policy</a>
+                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Handelsbetingelser</a>
               </div>
               <div class="lg:block pt-0 mt-0 hidden">
                   <label class="text-base font-medium leading-4 text-white">Hold dig opdateret!</label>
