alle added to filter

--- a/src/plakater.html
+++ b/src/plakater.html
@@ -243,14 +243,22 @@
                                 <fieldset>
                                         <ul class="flex items-center justify-between">
                                             <li>
+                                                <div class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-white text-black border-black border-2">
+                                                  <span class="font-medium">Alle</span>
+                                                </div>
+                                            </li>
+                                            
+                                            <li>
                                                 <div class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white hover:bg-white hover:text-black border-black border-2">
                                                   <span class="font-medium">Nyheder</span>
                                                 </div>
-                                              </li>
+                                            </li>
                                             
                                             <li>
                                               <div class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white hover:bg-white hover:text-black border-black border-2">
-                                                <span class="font-medium">Natur</span>
+                                                <a href="kategori.html">
+                                                    <span class="font-medium">Natur</span>
+                                                </a>
                                                 </div>
                                             </li>
 
