--- a/src/plakater.html
+++ b/src/plakater.html
@@ -162,7 +162,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="plakater.html"
+                    <a href="litteratur.html"
                     class="flex items-center justify-between text-base text-black focus:outline-none">
                     <p class="hover:border-b-black border-white border-b-2 pb-1">Shop litteratur</p>
                     <div>
