--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -162,7 +162,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="plakater.html"
+                  <a href="litteratur.html"
                   class="flex items-center justify-between text-base text-black focus:outline-none">
                   <p class="hover:border-b-black border-white border-b-2 pb-1">Shop litteratur</p>
                   <div>
@@ -246,7 +246,7 @@
                                                 <span class="font-medium">Alle</span>
                                               </div>
                                             </li>
-                                            
+
                                             <li>
                                               <div class="flex px-2.5 lg:px-7 py-2 lg:py-2.5 items-center text-sm hover:cursor-pointer bg-black text-white hover:bg-white hover:text-black border-black border-2">
                                                 <span class="font-medium">Nyheder</span>
