--- a/src/index.html
+++ b/src/index.html
@@ -269,7 +269,7 @@
           <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 lg:items-stretch">
             <div class="flex items-center p-8 bg-gray-100">
               <div class="mx-auto text-center lg:text-left">
-                <h2 class="text-2xl font-bold">
+                <h2 class="text-2xl lg:text-3xl font-bold">
                   Vores mest populære bøger
                 </h2>
 
@@ -374,7 +374,7 @@
       <section>
         <div class="max-w-screen-xl px-4 py-12 mx-auto sm:px-6 lg:px-8">
           <div class="text-center">
-            <h2 class="text-2xl font-bold">
+            <h2 class="text-2xl lg:text-3xl font-bold">
               De mest solgte plakater
             </h2>
 
@@ -585,7 +585,7 @@
                 <p class="ml-5 text-lg lg:text-xl">Vi har 5 stjerner på TrustPilot!</p>
               </div>
           </div>
-            <h2 class="text-2xl mt-4 lg:mt-5 font-bold tracking-tight text-center lg:text-3xl">
+            <h2 class="text-2xl lg:text-3xl lg:mt-5 mt-4 font-bold tracking-tight text-center">
               Læs anmeldelser fra vores dejlige kunder
             </h2>
           </div>
@@ -593,7 +593,7 @@
           <div class="mt-10 lg:mt-12 max-w-5xl flex justify-center mx-auto swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <blockquote class="p-8 bg-gray-100 max-w-lg rounded-lg">
+                <blockquote class="p-8 bg-gray-100 max-w-lg">
                   <div class="flex items-center">
                     <img
                       src="https://www.hyperui.dev/photos/man-4.jpeg"
@@ -620,7 +620,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <blockquote class="p-8 bg-gray-100 max-w-lg rounded-lg">
+                  <blockquote class="p-8 bg-gray-100 max-w-lg">
                     <div class="flex items-center">
                       <img
                         src="https://www.hyperui.dev/photos/man-4.jpeg"
@@ -647,7 +647,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <blockquote class="p-8 bg-gray-100 max-w-lg rounded-lg">
+                  <blockquote class="p-8 bg-gray-100 max-w-lg">
                     <div class="flex items-center">
                       <img
                         src="https://www.hyperui.dev/photos/man-4.jpeg"
@@ -674,7 +674,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <blockquote class="p-8 bg-gray-100 max-w-lg rounded-lg">
+                  <blockquote class="p-8 bg-gray-100 max-w-lg">
                     <div class="flex items-center">
                       <img
                         src="https://www.hyperui.dev/photos/man-4.jpeg"
