cookies and footer updated

--- a/src/index.html
+++ b/src/index.html
@@ -292,7 +292,7 @@
         rel="noopener noreferrer"
         class="text-sm font-medium hover:opacity-75"
       >
-        Vi bruger cookies. Ved at trykke kryds accepterer du.
+        Vi bruger cookies. Ved at trykke videre, accepterer du.
       </a>
 
       <button
@@ -871,25 +871,25 @@
               <div class="flex flex-col">
                   <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
                   <a href="index.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
                   <a href="plakater.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
                   <a href="litteratur.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
                   <a href="inspiration.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
               </div>
               <div class="flex flex-col">
                   <h2 class="text-base font-bold mt-10 lg:mt-0 leading-4  text-white">Kundeservice</h2>
                   <a href="om.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
                   </a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Handelsbetingelser</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Politikker og betingelser</a>
               </div>
               <div class="lg:block pt-0 mt-0 hidden">
                   <label class="text-base font-medium leading-4 text-white">Hold dig opdateret!</label>
