--- a/src/landingpage_1.html
+++ b/src/landingpage_1.html
@@ -99,7 +99,7 @@
       <!-- Main start -->
       <section>
         <h1 class="text-3xl font-bold text-center pt-8 mb-12 lg:text-5xl">
-          Mød vores nye kollektion
+          Mød vores nye spændende kollektion
         </h1>
 
         <div class="max-w-screen-xl px-4 mx-auto sm:px-6 lg:px-8 ">
@@ -119,7 +119,7 @@
               <article class="space-y-4 text-gray-600">
                 <h2 class="text-3xl font-bold py-2 text-black">Skab ro i hverdagen med "Tåge"</h2>
                 <p class="text-lg font-medium text-black">
-                  Savner du også ro i hverdagen? Vores nye kollektion af plakater introducerer ro og velvære til både sind og hjem.
+                  Savner du også ro og balance i hverdagen? Vores nye kollektion af plakater introducerer ren ro og velvære til både sind og hjem.
                 </p>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime consequatur corrupti voluptate magni maiores, culpa quod odio officiis suscipit perferendis recusandae at sequi debitis quos vel aperiam, doloremque non.
