--- a/src/landingpage_2.html
+++ b/src/landingpage_2.html
@@ -116,7 +116,7 @@
             <div class="py-3 lg:py-20">
               <article class="space-y-4 lg:pt-10 text-gray-600">
                 <p class="text-lg font-medium text-black">
-                  Savner du også ro i hverdagen? Vores nye kollektion af plakater introducerer ro og velvære til både sind og hjem.
+                  Savner du også ro og balance i hverdagen? Vores nye kollektion af plakater introducerer ren ro og velvære til både sind og hjem.
                 </p>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime consequatur corrupti voluptate magni maiores, culpa quod odio officiis suscipit perferendis recusandae at sequi debitis quos vel aperiam, doloremque non.
