--- a/src/produkt_bog.html
+++ b/src/produkt_bog.html
@@ -455,7 +455,21 @@
                             </fieldset>
                         </div>
 
-                        <a class="relative mt-10 w-full flex items-center justify-center py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="litteratur.html">
+                        <div>
+                          <div class="inline-flex items-center mt-5 text-black">
+                            <span class="inline-flex flex-shrink-0 justify-center items-center text-">
+                              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="25" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#00000" d="M21 3H3v18h18V3zM10 17l-5-5l1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>                            </span>
+                            <span class="inline-flex text-base ml-1 px-2">
+                              <p class="font-medium">På lager!</p>
+                            </span>
+                          </div>
+                          <div class="flex justify-between mt-1 text-black">
+                            <p class="text-sm mt-1">Leveringstid 1 hverdag</p>
+                          <p class="text-sm mt-1">Gratis levering over 299 kr.</p>
+                          </div>
+                        </div>
+
+                        <a class="relative mt-7 w-full flex items-center justify-center py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="litteratur.html">
                           <div class="inline-flex justify-center items-center">
                             <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
                             <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
