voucer removed + topbar added

--- a/src/index.html
+++ b/src/index.html
@@ -26,30 +26,20 @@
     -->
 
     <!-- Voucher start -->
-    <div class="relative px-4 py-3 text-white bg-black pr-14">
-      <p class="text-sm font-medium text-left sm:text-center">
-        Tilmeld dig vores nyhedsbrev og få 20% rabat på dit første køb!
-    
-        <a class="underline" href="/alpinejs"> Tilmed nyhedsbrev &rarr; </a>
-      </p>
-    
-      <button
-        aria-label="Close"
-        class="absolute p-1 transition -translate-y-1/2 rounded-lg top-1/2 right-4 bg-black/10 hover:bg-black/20"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="w-5 h-5"
-          viewBox="0 0 20 20"
-          fill="currentColor"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          />
-        </svg>
-      </button>
+    <div class="relative px-4 py-3  text-white bg-black pr-14">
+      <div class="flex justify-center">
+      <div class="text-xs md:gap-20 lg:gap-32 flex justify-between">
+        <p>
+          Levering indenfor 1 hverdag
+        </p>
+        <p>
+          Gratis levering når du køber for over 299 kr.
+        </p>
+        <p>
+          30 dages fuld returret
+        </p>
+      </div>
+    </div>
     </div>
     <!-- Voucher end -->
 
