--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       Footer
     -->
 
-    <!-- Voucher start -->
+    <!-- Topbar start -->
     <div class="relative px-4 py-3  text-white bg-black pr-14">
       <div class="flex justify-center">
       <div class="text-xs md:gap-20 lg:gap-32 flex justify-between">
@@ -41,7 +41,7 @@
       </div>
     </div>
     </div>
-    <!-- Voucher end -->
+    <!-- Topbar end -->
 
     <!-- Navigation start -->
     <div class="">
@@ -335,6 +335,73 @@
         </button>
       </aside>
       <!-- Cookie end -->
+
+      <!--  -->
+      <section>
+        <div class="max-w-screen-xl px-4 pt-16 pb-8 mx-auto sm:px-6 lg:px-8">
+          <div class="grid grid-cols-1 gap-8 lg:gap-16 lg:grid-cols-2">
+            <div class="max-w-screen-xl bg-black text-white px-4 py-16 mx-auto sm:px-6 lg:px-8">
+              <div class="max-w-lg mx-auto text-center">
+                <h1 class="text-2xl font-bold sm:text-3xl">Få 20% rabat på din ordre!</h1>
+
+                <p class="mt-4">
+                  Lige nu får du 20% rabat når du tilmelder dig vores nyhedsbrev.
+                </p>
+              </div>
+
+              <form action="" class="max-w-md mx-auto mt-8 mb-0 space-y-4">
+                <div>
+                  <label for="email" class="sr-only">Email</label>
+
+                  <div class="relative">
+                    <input
+                      type="email"
+                      class="w-full p-4 pr-12 text-sm border-gray-200 rounded-lg shadow-sm"
+                      placeholder="Skriv din email"
+                    />
+
+                    <span class="absolute inset-y-0 inline-flex items-center right-4">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="w-5 h-5 text-gray-400"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+
+                <div class="flex justify-end pt-4">
+                  <button
+                    type="submit"
+                    class="inline-block px-5 py-3 ml-3 text-sm font-medium text-black bg-white"
+                  >
+                    Sign in
+                  </button>
+                </div>
+              </form>
+            </div>
+      
+            <div class="lg:py-24 bg-white">
+              <h2 class="text-3xl font-bold sm:text-4xl">Fotoentusiaster med hjerte</h2>
+      
+              <p class="mt-4 text-gray-600">
+                Hos Lunefuld Lykke elsker vi både fotografi, fotokunst og mennesker. Derfor er det vigtigt for os at støtte et godt formål
+              </p>
+              <p class="mt-5">Når du handler hos os går <b>5% af beløbet til Sårbare Unge</b>, fordi vi identificerer os med personer, der har det svært - og hjælper dem med at komme videre.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--  -->
 
       <!-- Books start -->
       <section>
