--- a/src/produkt_plakat.html
+++ b/src/produkt_plakat.html
@@ -460,7 +460,7 @@
                             <span class="inline-flex flex-shrink-0 justify-center items-center text-">
                               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="25" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#00000" d="M21 3H3v18h18V3zM10 17l-5-5l1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>                            </span>
                             <span class="inline-flex text-base ml-1 px-2">
-                              <p class="font-medium">På lager!</p>
+                              <p class="font-medium">Kun 3 på lager!</p>
                             </span>
                           </div>
                           <div class="flex justify-between mt-1 text-black">
