--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
                 <h1 class="text-2xl font-bold sm:text-3xl">Få 20% rabat på din ordre!</h1>
 
                 <p class="mt-4">
-                  Lige nu får du 20% rabat når du tilmelder dig vores nyhedsbrev.
+                  Lige nu får du 20% rabat på dit første køb, når du tilmelder dig vores nyhedsbrev. Tilbuddet gælder kun til maj, skynd dig!
                 </p>
               </div>
 
@@ -380,13 +380,17 @@
                 </div>
 
                 <div class="flex justify-end pt-4">
-                  <button
-                    type="submit"
-                    class="inline-block px-5 py-3 ml-3 text-sm font-medium text-black bg-white"
-                  >
-                    Sign in
-                  </button>
+                  <a class="relative inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="litteratur.html">
+                    <div class="inline-flex items-center">
+                      <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
+                      <span class="relative text-base font-medium text-white transition-colors group-hover:text-black">
+                        Få din rabatkode
+                      </span>
+                      <svg class="w-7 h-auto ml-1 relative group-hover:fill-black group-active:fill-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                    </div>
+                  </a>
                 </div>
+
               </form>
             </div>
       
