--- a/src/index.html
+++ b/src/index.html
@@ -397,10 +397,10 @@
             <div class="lg:py-24 bg-white">
               <h2 class="text-3xl font-bold sm:text-4xl">Fotoentusiaster med hjerte</h2>
       
-              <p class="mt-4 text-gray-600">
+              <p class="mt-5 text-base lg:text-lg">
                 Hos Lunefuld Lykke elsker vi både fotografi, fotokunst og mennesker. Derfor er det vigtigt for os at støtte et godt formål
               </p>
-              <p class="mt-5">Når du handler hos os går <b>5% af beløbet til Sårbare Unge</b>, fordi vi identificerer os med personer, der har det svært - og hjælper dem med at komme videre.</p>
+              <p class="mt-5 text-base lg:text-lg">Når du handler hos os går <b>5% af beløbet til Sårbare Unge</b>, fordi vi identificerer os med personer, der har det svært - og hjælper dem med at komme videre.</p>
             </div>
           </div>
         </div>
